--- a/i3/config
+++ b/i3/config
@@ -41,6 +41,9 @@ floating_modifier Mod1
 # start a terminal
 bindsym Mod1+Return exec i3-sensible-terminal
 
+# start firefox
+bindsym Mod1+b exec firefox
+
 # kill focused window
 bindsym Mod1+Shift+q kill
 
