--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -30,3 +30,6 @@ setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244
 setw -g window-status-bell-style bold
 setw -g window-status-bell-style fg=colour255
 setw -g window-status-bell-style bg=colour1
+
+
+bind-key y set-window-option synchronize-panes\; display-message "synchronize-mode-toggled."
