--- a/i3/config
+++ b/i3/config
@@ -9,7 +9,7 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-set $mod Mod1
+set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -29,6 +29,7 @@ exec --no-startup-id dex --autostart --environment i3
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+bindsym $mod+Shift+x exec i3lock -c 000000
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -41,24 +42,18 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
+bindsym $mod+z exec --no-startup-id amixer set Master 5%-
+bindsym $mod+x exec --no-startup-id amixer set Master 5%+
+bindsym $mod+c exec --no-startup-id amixer set Master toggle
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
+# move tiling windows via drag & drop by left-clicking into the title bar,
+# or left-clicking anywhere into the window while holding the floating modifier.
+#tiling_drag modifier titlebar
+
 # start a terminal
 bindsym $mod+Return exec i3-sensible-terminal
-
-# start a browser
-bindsym $mod+b exec google-chrome
-
-# start cursor
-bindsym $mod+c exec --no-startup-id ~/Downloads/cursor.AppImage
-
-
-# start vscode
-bindsym $mod+p exec --no-startup-id code
-
-# lock screen
-bindsym $mod+x exec --no-startup-id i3lock
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -191,6 +186,7 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
+#bindsym Mod4+l exec i3lock
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
