--- a/i3/config
+++ b/i3/config
@@ -36,15 +36,27 @@ bindsym $mod+Shift+x exec i3lock -c 000000
 exec --no-startup-id nm-applet
 
 # Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+#set $refresh_i3status killall -SIGUSR1 i3status
+#bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
+#bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+#bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
+#bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && dunstify -h int:value:$(pamixer --get-volume) "Volume: $(pamixer --get-volume)%"
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && dunstify -h int:value:$(pamixer --get-volume) "Volume: $(pamixer --get-volume)%"
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && dunstify -h int:value:$(pamixer --get-mute) "Mute: $(pamixer --get-mute)"
 
-bindsym $mod+z exec --no-startup-id amixer set Master 5%-
-bindsym $mod+x exec --no-startup-id amixer set Master 5%+
-bindsym $mod+c exec --no-startup-id amixer set Master toggle
+#bindsym $mod+z exec --no-startup-id amixer set Master 5%-
+#bindsym $mod+x exec --no-startup-id amixer set Master 5%+
+#bindsym $mod+c exec --no-startup-id amixer set Master toggle
+
+bindsym $mod+z exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% && dunstify -h int:value:$(pamixer --get-volume) "Volume: $(pamixer --get-volume)%"
+bindsym $mod+x exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5% && dunstify -h int:value:$(pamixer --get-volume) "Volume: $(pamixer --get-volume)%"
+bindsym $mod+c exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && dunstify -h int:value:$(pamixer --get-mute) "Mute: $(pamixer --get-mute)"
+
+#bindsym $mod+z exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
+#bindsym $mod+x exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%
+#bindsym $mod+c exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
@@ -185,6 +197,7 @@ mode "resize" {
         bindsym $mod+r mode "default"
 }
 
+exec --no-startup-id pasystray
 bindsym $mod+r mode "resize"
 #bindsym Mod4+l exec i3lock
 
