--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,1 +1,9 @@
-set -g default-terminal "screen-256color"
+# Use shift + arrow keys to resize panes
+bind -n C-S-Left resize-pane -L 5
+bind -n C-S-Right resize-pane -R 5
+bind -n C-S-Up resize-pane -U 5
+bind -n C-S-Down resize-pane -D 5
+
+# Open new panes in the same directory
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
