--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -27,7 +27,7 @@ bind = SUPER, return, exec, $terminal
 bind = SUPER, F, exec, nautilus --new-window
 bind = SUPER, B, exec, $browser
 bind = SUPER, M, exec, spotify
-bind = SUPER, Z, exec, zeditor
+bind = SUPER, Z, exec, zed
 bind = SUPER, N, exec, $terminal -e nvim
 bind = SUPER, T, exec, $terminal -e btop
 bind = SUPER, D, exec, $terminal -e lazydocker
@@ -77,6 +77,5 @@ input {
     scroll_factor = 0.4
   }
 }
-
 # Scroll faster in the terminal
-windowrule = scrolltouchpad 1.5, class:Alacritty
+#windowrule = scrolltouchpad 1.5, class:Alacritty
